# rusty-pipes

./: Cargo.toml  readme.md
assets/web/: app.css  app.js  index.html
src/: api_rest.rs  app.rs  app_state.rs  audio.rs  audio_event.rs  main.rs  organ.rs  organ_grandorgue.rs  organ_hauptwerk.rs  tui_config.rs
