[package]
name = "rusty-pipes"
description = "Virtual pipe organ simulator"
version = "1.6.8"
license = "GPL-2.0-or-later"
authors = ["dividebysandwich"]
repository = "https://github.com/dividebysandwich/rusty-pipes"
edition = "2024"

[dependencies]
anyhow = "1.0"
cpal = { version = "0.17.1", features = ["jack"] }
crossterm = "0.29"
decibel = "0.1.2"
ini = "1.3.0"
midir = "0.10.3"
ratatui = { version = "0.30.0", features = ["crossterm"] }
ringbuf = "0.4"
rubato = "1.0.1"
rodio = "0.22.2"
hound = "3.5.1"
byteorder = "1.5.0"
itertools = "0.14.0"
num-traits = "0.2.19"
log = "0.4.29"
simplelog = "0.12"
midly = "0.5"
clap = { version = "4.6.0", features = ["derive"] }
fft-convolver = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = { version = "0.39", features = ["serde", "serialize"] }
eframe = "0.33.3"
egui = "0.33.3"
rfd = "0.17.2"
confy = "2.0"
dirs = "6.0"
hotpath = { version = "0.14.0", optional = true }
rayon = "1.11"
symphonia = { version = "0.5", features = ["wav"] }
sys-locale = "0.3.2"
open = "5.3.3"
chrono = "0.4.44"
actix-web = "4"
actix-ws = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
futures-util = { version = "0.3", default-features = false }
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
rust-i18n = "3"
audioadapter = "2.0"
audioadapter-buffers = "2.0"
bytemuck = "1.25.0"
zip = "8.2.0"
walkdir = "2.5"
flate2 = "1.1.9"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]

[profile.release]
lto = true

[package.metadata.deb]
depends = "libasound2, libpulse-dev, libjack-jackd2-0, libx11-6, libxkbcommon0, libwayland-client0, libegl1, libgl1, desktop-file-utils"
assets = [
    ["assets/rusty-pipes.desktop", "/usr/share/applications/rusty-pipes.desktop", "644"],
    ["assets/rusty-pipes-text.desktop", "/usr/share/applications/rusty-pipes-text.desktop", "644"],
    ["assets/rusty-pipes.png", "/usr/share/pixmaps/rusty-pipes.png", "644"],
    ["target/release/rusty-pipes", "/usr/bin/rusty-pipes", "755"]
]

[package.metadata.bundle]
name = "Rusty Pipes"
identifier = "com.dividebysandwich.rustypipes"
icon = ["assets/rusty-pipes.icns"]
version = "1.6.8" 
copyright = "Copyright 2025-2026 Dividebysandwich"
category = "Music"
short_description = "Virtual pipe organ simulator"
long_description = """
A MIDI-controlled virtual pipe organ simulator compatible with 
GrandOrgue and Hauptwerk sample sets.
"""
